Bug 1561667 - Ensure that SurfaceTexture is attached before calling ReleaseTexImage. r=jgilbert,rbarker a=RyanVM

Ensure that SurfaceTexture is attached before calling ReleaseTexImage.

Differential Revision: https://phabricator.services.mozilla.com/D38679

--HG--
extra : source : cdd04fa751fc07a28b0289af9fcd4a0df1c22f1f